# sentinel-core-launcher

./: .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  server.config.json  vite.config.ts
.github/workflows/: build.yml
client/: init.lua
client/data/cursors/: cursors.otml
client/data/fonts/: almendra-14px.otfont  cipsoftFont.otfont  constantia-16px.otfont  constantia-20px.otfont  constantia-26px-bold.otfont  constantia-26px.otfont  lemon-milk-11px-rounded.otfont  lemon-milk-11px.otfont  magistralic13.otfont  mirza-medium-16.otfont  mirza-medium-30.otfont  sans-bold-16px.otfont  small-9px.otfont  terminus-10px.otfont  terminus-14px-bold.otfont  verdana-11px-antialised.otfont  verdana-11px-monochrome.otfont  verdana-11px-rounded.otfont  verdana-9px-bold.otfont  verdana-9px-italic.otfont  verdana-9px.otfont  (+1 more)
docker/: Dockerfile
php-scripts/: README.md  checksums.php  config.php  download.php  generate-checksums.php
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AntiCheatStatus.css  AntiCheatStatus.tsx  LaunchBar.css  LaunchBar.tsx  NewsCarousel.css  NewsCarousel.tsx  SecurityMetrics.css  SecurityMetrics.tsx  Sidebar.css  Sidebar.tsx  Titlebar.css  Titlebar.tsx  TwitchStreams.css  TwitchStreams.tsx  VersionSelector.css  VersionSelector.tsx
src/config/: serverConfig.ts  types.ts
src/hooks/: useLauncherState.ts
src/pages/: HomePage.css  HomePage.tsx  SettingsPage.css  SettingsPage.tsx
src/styles/: app.css  global.css
(+481 files in other folders)
