[package]
name = "sentinel-core-launcher"
version = "1.0.0"
description = "Sentinel Core - Cybernetic Defense System Launcher for OTClient"
authors = ["Sentinel Core Team"]
edition = "2021"

[lib]
name = "sentinel_core_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
